symmetrical-broccoli-routetable-ap-south-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-ab85d6c2", 
        "VpcId": "vpc-7a6f2813", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
